# ovr

./: .gitignore  CMakeLists.txt  protocol40.xlsx
apps/: sandbox.cpp
apps/app/: CMakeLists.txt
apps/app/src/: adjust.cpp  adjust.h  app.cpp  calibrate.cpp  calibrate.h  sensors.cpp  sensors.h  tracking.cpp  tracking.h
apps/app/src/ui/: mouse_handler.h  ui_elements.cpp  ui_elements.h  viewer.cpp  viewer.h
apps/tests/: testcamera.cpp  testcontroller.cpp  testhmd.cpp  testmonitor.cpp  testtracking.cpp
cmake/: FindLibUSB.cmake  FindOVR.cmake
driver/: driver.vrdrivermanifest
driver/resources/: driver.vrresources
driver/resources/input/: ovrcontroller_profile.json
driver/resources/localization/: localization.json
driver/resources/settings/: default.vrsettings
firmware/HMDv4/: HMDv4.ino
firmware/VRController5/: VRController5.ino
firmware/VRController5/adc continoues/: VRController5.ino
firmware/VRController5/with data conversion/: VRController6.ino
libs/driver/: CMakeLists.txt
libs/driver/src/: base_station.cpp  base_station.h  common.h  controller.cpp  controller.h  driver_ovr.cpp  hmd.cpp  hmd.h  server_driver.cpp  server_driver.h  watchdog.cpp  watchdog.h
libs/ovr/: CMakeLists.txt
libs/ovr/include/: ovr.h  quaternion.h
libs/ovr/src/: ovr.cpp
libs/ovr/src/camera/: camera.cpp  camera.h  object_tracker.cpp  object_tracker.h
libs/ovr/src/common/: camera_math.cpp  camera_math.h  madgwick.cpp  madgwick.h  mahony.cpp  mahony.h  tracking_math.cpp  tracking_math.h
libs/ovr/src/common/exclude/: sensor_fusion.cpp  sensor_fusion.h
libs/ovr/src/communication/: udp_server.cpp  udp_server.h
libs/ovr/src/devices/: hand_controller.cpp  hand_controller.h  hmd.cpp  hmd.h  tracked_device.cpp  tracked_device.h
tools/: base_gui.py  controller_gui.py  controller_ping_test.py  hmd_gui.py  hmd_ping_test.py  mag_cal.py  socket_gui.py
tools/lens correction/: gui.py  image_generate.py
